--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -1,134 +1,162 @@
 body {
   font-size: 16px;
-  font-family: 'Oxygen', sans-serif;
   color: #fff;
   background-color: #61122f;
+  font-family: 'Oxygen', sans-serif;
 }
-#header-nav{
-	border-radius: 0;
-	border: 0;
-    background-color: #f6b319;
+
+/** HEADER **/
+#header-nav {
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
 }
-#logo-img{
-   background: url('../images/restaurant-logo_large.png');
-   width: 150px;
-   height: 150px;
-   margin: 10px 15 px 10px 0;
+
+#logo-img {
+  background: url('../images/restaurant-logo_large.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
 }
-.navbar-brand{
-	padding-top: 25px;
+
+.navbar-brand {
+  padding-top: 25px;
 }
-.navbar-brand h1{
-  font-family: 'Lora',serif;
+
+.navbar-brand h1 { /* Restaurant name */
+  font-family: 'Lora', serif;
   color: #557c3e;
   font-size: 1.5em;
   text-transform: uppercase;
-  font-weight:  bold;
+  font-weight: bold;
   text-shadow: 1px 1px 1px #222;
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
 }
-.navbar-brand a:hover, .navbar-brand a:focus{
-	text-decoration: none;
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+.navbar-brand p { /* Kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
+}
+.navbar-brand p span { /* Star-K */
+  vertical-align: middle;
 }
 
-.navbar-brand p{
-     color: #000;
-     text-transform: uppercase;
-     font-size: .7em;
-     margin-top: 15px;
+#nav-list {
+  margin-top: 10px;
 }
-.navbar-brand p span{
-	vertical-align: middle;
+#nav-list a {
+  color: #951C49;
+  text-align: center;
 }
-#nav-list{
-	margin-top: 10px;
+#nav-list a:hover {
+  background: #E7E7E7;
 }
-#nav-list a{
-	color: #951C49;
-	text-align: center
-}
-#nav-list a:hover{
-	background: #E7E7E7;
-}
-#nav-list a span{
-	font-size: 1.8em;
-}
-#phone{
-	margin-top: 5px;
-}
-#phone a{  /*Phone number*/
-	text-align: right;
-	padding-bottom: 0;
-}
-#phone div{  /*We Deliver*/
-	color: #557c3e;
-	text-align: right;
-	padding-right: 15px;
-}
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar{
-	border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle{
-	clear: both;
-     margin-top: -30px;
+#nav-list a span {
+  font-size: 1.8em;
 }
 
-/*END HEADER*/
+#phone {
+  margin-top: 5px;
+}
+#phone a { /* Phone number */
+  text-align: right;
+  padding-bottom: 0;
+}
+#phone div { /* We Deliver */
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+/* END HEADER */
+
+/* HOME PAGE */
 .container .jumbotron {
   box-shadow: 0 0 50px #3F0C1F;
   border: 2px solid #3F0C1F;
 }
-/*END HOME PAGE*/
-@media(min-width: 1200px){
-.container .jumbotron {
+
+/* END HOME PAGE */
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+  .container .jumbotron {
     background: url('../images/jumbotron_1200.jpg') no-repeat;
     height: 675px;
+  }
 }
-}
-@media (min-width: 992px) and (max-width: 1199px){
-#logo-img{	
-background: url("../images/restaurant-logo_medium.png") no-repeat;
-width: 100px;
-height: 100px;
-margin: 5px 5px 5px 0;
-}
-.container .jumbotron {
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* Header */
+  #logo-img {
+    background: url('../images/restaurant-logo_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+  /* End Header */
+
+  /* Home Page */
+  .container .jumbotron {
     background: url('../images/jumbotron_992.jpg') no-repeat;
     height: 558px;
+  }
+  /* End Home Page */
 }
-}  
-@media (min-width: 768px) and (max-width: 991px){
-	.container .jumbotron {
+
+/********** Small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  /* Home Page */
+  .container .jumbotron {
     background: url('../images/jumbotron_768.jpg') no-repeat;
     height: 432px;
   }
+  /* End Home Page */
+
 }
-@media (max-width: 767px){
-.navbar-brand{
-	padding-top: 10px;
-	height: 80px;
-}
-.navbar-brand h1{
-	padding-top: 10px;
-	font-size: 5vw;   /*1vw=1% of viewport*/
-}
-.navbar-brand p{
-	font-size: .6em;
-	margin-top: 12px;
-}
-.navbar-brand p img{ /*star-k*/
-	height: 20px;
-}
-#collapsable-nav a{
-	font-size: 1.2em;
-}
-#collapsable-nav a span{
-	font-size: 1em;
-	margin-right: 5px;
-}
- #call-btn > a {
+
+/********** Extra small devices only **********/
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
+  #collapsable-nav a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+  #collapsable-nav a span { /* Collapsed nav menu glyph */
+    font-size: 1em;
+    margin-right: 5px;
+  }
+
+  #call-btn > a {
     font-size: 1.5em;
     display: block;
     margin: 0 20px;
@@ -152,6 +180,3 @@ margin: 5px 5px 5px 0;
   }
 
 }
-
-
-
